fix bug base url

--- a/tpl/tpl-index.html
+++ b/tpl/tpl-index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/css/public.css">
-    <link rel="stylesheet" href="assets/css/map.css">
+    <link rel="stylesheet" href="<?= BASEURL ?>/assets/css/public.css">
+    <link rel="stylesheet" href="<?= BASEURL ?>/assets/css/map.css">
     <title><?= SITETITLE ?></title>
 </head>
 
@@ -79,9 +79,9 @@
         </div>
     </section>
     
-    <script src='../assets/js/jquery.js'></script>
-    <script src="../assets/js/map.js"></script>
-    <script src="../assets/js/public.js"></script>
+    <script src='<?= BASEURL ?>/assets/js/jquery.js'></script>
+    <script src="<?= BASEURL ?>/assets/js/map.js"></script>
+    <script src="<?= BASEURL ?>/assets/js/public.js"></script>
 </body>
 
 </html>
